selfhost/test/typechecker/bindingdecl/error_invalid_destructuring_tuple_non_tuple.2.out
Error at %FILE_NAME%:2:9
Invalid destructuring
  |  val (a, (b, c)) = x
             ^
A value of type 'Int' cannot be destructured as a tuple
